FWU: Make setting the bootloader used in FWU simpler
TFM_FWU_BOOTLOADER_LIB is set as the full path of the bootloader
configuation file in Firmware Update partition. To make it simpler,
just set it as the name of the bootloader.

Change-Id: Ieb145793590628f75c8eebfe1c131affcd36bd05
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/secure_fw/partitions/firmware_update/CMakeLists.txt
+++ b/secure_fw/partitions/firmware_update/CMakeLists.txt
@@ -39,12 +39,11 @@ target_sources(tfm_partitions
             ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/firmware_update/auto_generated/static_info_tfm_firmware_update.c>
 )
 
-# Include the bootloader specific configuration.
-if ((NOT TFM_FWU_BOOTLOADER_LIB) OR (NOT EXISTS ${TFM_FWU_BOOTLOADER_LIB}))
+# The bootloader specific configuration.
+if ((NOT TFM_FWU_BOOTLOADER_LIB) OR (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/bootloader/${TFM_FWU_BOOTLOADER_LIB}))
     message(FATAL_ERROR "TFM_FWU_BOOTLOADER_LIB invalid")
 endif()
-
-include(${TFM_FWU_BOOTLOADER_LIB})
+add_subdirectory(bootloader/${TFM_FWU_BOOTLOADER_LIB})
 
 target_link_libraries(tfm_psa_rot_partition_fwu
     PRIVATE
