--- a/secure_fw/partitions/partition_load_info.template
+++ b/secure_fw/partitions/partition_load_info.template
@@ -126,12 +126,12 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
                                     | SERVICE_FLAG_NS_ACCESSIBLE
         {% endif %}
         {% if manifest.psa_framework_version > 1.0 and service.connection_based is sameas false %}
-                                    | SERVICE_FLAG_STATELESS
+                                    | SERVICE_FLAG_STATELESS | {{"%x"|format(service.stateless_handle_index)}}
         {% endif %}
         {% if service.version_policy %}
-                                    | TFM_VERSION_POLICY_{{service.version_policy}},
+                                    | SERVICE_VERSION_POLICY_{{service.version_policy}},
         {% else %}
-                                    | TFM_VERSION_POLICY_STRICT,
+                                    | SERVICE_VERSION_POLICY_STRICT,
         {% endif %}
         {% if service.version %}
             .version                = {{service.version}},
