Tools: Change parser processing sequence
The existing sequence outputs partition files directly, which leaves
no chance to reflect the post-processed partition data in the result
file.

A rational sequence should be:

- Collect per partition info by parsing their manifests (no writing).
- Post operations on collected data (Stateless handle processing e.g.).
- Write files based on updated data at the last step.

The variable names in parser and templates are updated as well.

Change-Id: I553c19960d81d7d8cde524f0e55f1b278c5e3dfe
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/secure_fw/partitions/manifestfilename.template
+++ b/secure_fw/partitions/manifestfilename.template
@@ -7,8 +7,8 @@
 
 {{utilities.donotedit_warning}}
 
-#ifndef __PSA_MANIFEST_{{file_name.upper()}}_H__
-#define __PSA_MANIFEST_{{file_name.upper()}}_H__
+#ifndef __PSA_MANIFEST_{{manifest_out_basename.upper()}}_H__
+#define __PSA_MANIFEST_{{manifest_out_basename.upper()}}_H__
 
 #ifdef __cplusplus
 extern "C" {
@@ -71,4 +71,4 @@ psa_flih_result_t {{irq.name|lower}}_flih(void);
 }
 #endif
 
-#endif /* __PSA_MANIFEST_{{file_name.upper()}}_H__ */
+#endif /* __PSA_MANIFEST_{{manifest_out_basename.upper()}}_H__ */
