SPM: Add partition runtime region in the linker
- Add ZI region in the linker script for holding partition runtime
  and service runtime data, replacing the original runtime data
  arrays.
- Organize the partition and service runtime data with linked list.
- The logic for loading partitions and services is changed
  accordingly.

Change-Id: I7ccfb5055cf62b7a3d185812af43084c767a98dd
Signed-off-by: Ken Liu <Ken.Liu@arm.com>
Co-authored-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -134,6 +134,14 @@ LR_CODE S_CODE_START {
         * (+RW +ZI)
     }
 
+    ER_PART_RT_POOL +0 ALIGN 4 {
+        *(.bss.part_runtime)
+    }
+
+    ER_SERV_RT_POOL +0 ALIGN 4 {
+        *(.bss.serv_runtime)
+    }
+
     /**** PSA RoT RWZI starts here */
 {% for partition in partitions %}
     {% if partition.manifest.type == 'PSA-ROT' %}
