Boot & FWU: Add support of reverting mechanism in DIRECT_XIP mode
After updating the version of MCUBoot, revert mechanism in DIRECT_XIP
mode is supported in MCUBoot. This commit adds the support of it in
build system and updates the mcuboot based FWU shim layer
implementation accordingly.

Change-Id: I017d02e4161daee56f54ed3ed09f98ebb9a776e0
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -138,6 +138,7 @@ if(BL2)
         PUBLIC
             BL2
             MCUBOOT_${MCUBOOT_UPGRADE_STRATEGY}
+            $<$<BOOL:${MCUBOOT_DIRECT_XIP_REVERT}>:MCUBOOT_DIRECT_XIP_REVERT>
             $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:SYMMETRIC_INITIAL_ATTESTATION>
             $<$<BOOL:${MCUBOOT_HW_KEY}>:MCUBOOT_HW_KEY>
             MCUBOOT_FIH_PROFILE_${MCUBOOT_FIH_PROFILE}
