--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -40,9 +40,9 @@ LR_CODE S_CODE_START {
         * (+RO)
     }
 
-    /**** Section for holding partition static data */
-    TFM_SP_STATIC_LIST +0 ALIGN 4 {
-        *(.partition_info)
+    /**** Section for holding partition RO load data */
+    TFM_SP_LOAD_LIST +0 ALIGN 4 {
+        *(.part_load)
     }
 
     /**** PSA RoT CODE + RO-data starts here */
