--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -101,13 +101,13 @@ SECTIONS
     . = ALIGN(32);
     Image$$PT_RO_START$$Base = .;
 
-    /**** Section for holding partition static RO data */
-    .TFM_SP_STATIC_LIST : ALIGN(4)
+    /**** Section for holding partition RO load data */
+    .TFM_SP_LOAD_LIST : ALIGN(4)
     {
-       KEEP(*(.partition_info))
+       KEEP(*(.part_load))
     } > FLASH
-    Image$$TFM_SP_STATIC_LIST$$RO$$Base = ADDR(.TFM_SP_STATIC_LIST);
-    Image$$TFM_SP_STATIC_LIST$$RO$$Limit = ADDR(.TFM_SP_STATIC_LIST) + SIZEOF(.TFM_SP_STATIC_LIST);
+    Image$$TFM_SP_LOAD_LIST$$RO$$Base = ADDR(.TFM_SP_LOAD_LIST);
+    Image$$TFM_SP_LOAD_LIST$$RO$$Limit = ADDR(.TFM_SP_LOAD_LIST) + SIZEOF(.TFM_SP_LOAD_LIST);
     . = ALIGN(32);
 
     /**** PSA RoT RO CODE + RO-data starts here */
