--- a/secure_fw/spm/cmsis_func/tfm_secure_irq_handlers.inc.template
+++ b/secure_fw/spm/cmsis_func/tfm_secure_irq_handlers.inc.template
@@ -27,9 +27,8 @@
 #endif /* {{partition.attr.conditional}} */
     {% endif %}
 {% endfor %}
-
-{% macro _irq_record(partition_name, signal, line, priority) -%}
-{ {{ partition_name }}, {{ signal }}, {{ line }}, {{ priority }} },
+{% macro _irq_record(partition_name, signal, line) -%}
+{ {{ partition_name }}, {{ signal }}, {{ line }} },
 {%- endmacro %}
 
 /* Definitions of the signals of the IRQs */
@@ -46,12 +45,7 @@ const struct tfm_core_irq_signal_data_t tfm_core_irq_signals[] = {
             {% else %}
 #error "Interrupt source isn't provided for 'irqs' in partition {{partition.manifest.name}}"
             {% endif %}
-            {% if handler.tfm_irq_priority %}
-                {% set irq_data.priority = handler.tfm_irq_priority %}
-            {% else %}
-                {% set irq_data.priority = "TFM_DEFAULT_SECURE_IRQ_PRIORITY" %}
-            {% endif %}
-    {{ _irq_record(partition.manifest.name, handler.signal, irq_data.line, irq_data.priority) }}
+    {{ _irq_record(partition.manifest.name, handler.signal, irq_data.line) }}
         {% endfor %}
         {% if partition.attr.conditional %}
 #endif /* {{partition.attr.conditional}} */
