--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(bl2
     $<$<BOOL:${DEFAULT_MCUBOOT_SECURITY_COUNTERS}>:src/security_cnt.c>
     $<$<BOOL:${DEFAULT_MCUBOOT_FLASH_MAP}>:src/default_flash_map.c>
     $<$<BOOL:${MCUBOOT_DATA_SHARING}>:src/shared_data.c>
+    $<$<BOOL:${PLATFORM_DEFAULT_PROVISIONING}>:src/provisioning.c>
 )
 
 add_subdirectory(ext/mcuboot)
