Platform: Use OTP as backing for attestation data
Change attestation HAL to load items from the OTP HAL by default. Change
rotpk loading to use OTP HAL. Update platform attestation HAL
implementations where required.

Change-Id: I661eb293e9ed3a436571c222530659bb8546da96
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/secure_fw/partitions/lib/sprt/CMakeLists.txt
+++ b/secure_fw/partitions/lib/sprt/CMakeLists.txt
@@ -21,6 +21,7 @@ target_sources(tfm_sprt
         ./crt_memcpy.c
         ./crt_memmove.c
         ./crt_memset.c
+        ./crt_strnlen.c
         ./service_api.c
         $<$<BOOL:${TFM_SP_META_PTR_ENABLE}>:./sprt_partition_metadata_indicator.c>
 )
