Tools: Silence Generating... messages
The build log is cluttered with messages that are usually
inconsequential. These messages start with 'Generating' and tend to
hide warnings and errors that appear.

This commit adds a quiet flag to the script in question and allows
enabling the quiet mode by with a flag. If you would not like to see
these messages enable PARSE_MANIFEST_QUIET. This goes a long way to
having a shorter, less noisy build log.

Change-Id: I085ac4f4909e86c3ccecf1bdf5482bafaecd3dcf
Signed-off-by: Jimmy Brisson <jimmy.brisson@linaro.org>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -123,11 +123,18 @@ add_custom_target(tfm_generated_files
     SOURCES ${OUTPUT_FILES}
 )
 
+if (PARSE_MANIFEST_QUIET)
+    set(PARSE_MANIFEST_QUIET_FLAG "-q")
+else()
+    set(PARSE_MANIFEST_QUIET_FLAG "")
+endif()
+
 add_custom_command(OUTPUT ${OUTPUT_FILES}
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tfm_parse_manifest_list.py
                                   -m ${COMBINED_LIST}
                                   -f ${GENERATED_FILE_LISTS}
                                   -o ${CMAKE_BINARY_DIR}/generated
+                                  ${PARSE_MANIFEST_QUIET_FLAG}
     DEPENDS ${TEMPLATE_FILES} ${MANIFEST_FILES}
     DEPENDS ${TEMP_MANIFEST_LISTS} ${CONFIGURED_MANIFEST_LISTS} ${GENERATED_FILE_LISTS}
 )
@@ -140,6 +147,7 @@ execute_process(
                                   -m ${COMBINED_LIST}
                                   -f ${GENERATED_FILE_LISTS}
                                   -o ${CMAKE_BINARY_DIR}/generated
+                                  ${PARSE_MANIFEST_QUIET_FLAG}
     RESULT_VARIABLE RET
 )
 
